--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "vue-svg-map",
-	"version": "1.2.0",
-	"description": "A set of Vue.js components to display an interactive SVG map",
-	"author": "Victor Cazanave <victor.cazanave@gmail.com>",
+	"name": "vue3-svg-map",
+	"version": "2.1.0",
+	"description": "A set of Vue.js components to display an interactive SVG map, Vue3 compatible",
+	"author": "Santiago Galán <santiagogalan13@gmail.com>",
 	"keywords": [
 		"vue",
 		"component",
@@ -34,13 +34,13 @@
 		"test": "jest",
 		"prepublish": "npm run lint && npm run test && npm run build"
 	},
-	"homepage": "https://github.com/VictorCazanave/vue-svg-map#readme",
+	"homepage": "https://github.com/melenas1414/vue-svg-map#readme",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/VictorCazanave/vue-svg-map.git"
+		"url": "git+https://github.com/melenas1414/vue-svg-map.git"
 	},
 	"bugs": {
-		"url": "https://github.com/VictorCazanave/vue-svg-map/issues"
+		"url": "https://github.com/melenas1414/vue-svg-map/issues"
 	},
 	"devDependencies": {
 		"@vue/test-utils": "^1.0.0-beta.30",
@@ -61,11 +61,11 @@
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-scss": "^1.0.2",
 		"rollup-plugin-vue": "5.1.1",
-		"vue": "^2.6.11",
+		"vue": "^2.6.11 || ^3.0.0",
 		"vue-jest": "^3.0.5",
 		"vue-template-compiler": "^2.6.11"
 	},
 	"peerDependencies": {
-		"vue": "^2.0.0"
+		"vue": "^2.0.0 || ^3.0.0"
 	}
 }
