feat: vue3 support added, update depends, rollup -> vite, jest -> vitest

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "vue3-svg-map",
-	"version": "2.1.0",
+	"version": "1.0.1",
 	"description": "A set of Vue.js components to display an interactive SVG map, Vue3 compatible",
-	"author": "Santiago Galán <santiagogalan13@gmail.com>",
+	"author": "Egor Kulikov <egor.kulikov.dev@gmail.com>",
 	"keywords": [
 		"vue",
 		"component",
@@ -10,62 +10,60 @@
 		"interactive",
 		"map",
 		"checkbox",
-		"radiobutton"
+		"radiobutton",
+		"vite"
 	],
 	"license": "MIT",
-	"main": "dist/index.umd.js",
-	"module": "dist/index.esm.js",
-	"unpkg": "dist/index.min.js",
+	"main": "dist/vue3-svg-map.umd.js",
+	"module": "./dist/vue3-svg-map.js",
+	"type": "module",
+	"exports": {
+		".": {
+			"import": "./dist/vue3-svg-map.js",
+			"require": "./dist/vue3-svg-map.umd.cjs"
+		},
+		"./style.css": "./dist/style.css"
+	},
 	"browser": {
 		"./sfc/svg-map": "src/components/svg-map.vue",
 		"./sfc/checkbox-svg-map": "src/components/checkbox-svg-map.vue",
 		"./sfc/radio-svg-map": "src/components/radio-svg-map.vue"
 	},
 	"files": [
-		"/src/components/*.vue",
 		"/dist"
 	],
 	"scripts": {
-		"build:umd": "rollup --config rollup.config.js --format umd --file dist/index.umd.js",
-		"build:es": "rollup --config rollup.config.js --format es --file dist/index.esm.js",
-		"build:unpkg": "rollup --config rollup.config.js --format iife --file dist/index.min.js",
-		"build": "npm run build:umd & npm run build:es & npm run build:unpkg",
+		"build": "vite build",
 		"lint": "eslint src/ demo/src/ --ext .js,.vue",
-		"test": "jest",
+		"test": "vitest",
 		"prepublish": "npm run lint && npm run test && npm run build"
 	},
-	"homepage": "https://github.com/melenas1414/vue-svg-map#readme",
+	"homepage": "https://github.com/datfcknadam/vue3-svg-map#readme",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/melenas1414/vue-svg-map.git"
+		"url": "git+https://github.com/datfcknadam/vue3-svg-map.git"
 	},
 	"bugs": {
-		"url": "https://github.com/melenas1414/vue-svg-map/issues"
+		"url": "https://github.com/datfcknadam/vue3-svg-map/issues"
 	},
 	"devDependencies": {
-		"@vue/test-utils": "^1.0.0-beta.30",
-		"babel-core": "^6.26.3",
-		"babel-jest": "^24.9.0",
-		"babel-preset-env": "^1.7.0",
+		"@babel/core": "^7.24.4",
+		"@babel/preset-env": "^7.24.4",
+		"@vitejs/plugin-vue": "^5.0.4",
+		"@vue/test-utils": "^2.4.5",
 		"eslint": "^5.16.0",
 		"eslint-config-standard": "^12.0.0",
 		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-jest": "^23.1.1",
 		"eslint-plugin-node": "^9.2.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
 		"eslint-plugin-vue": "^5.2.3",
-		"jest": "^24.9.0",
-		"rollup": "^1.26.3",
-		"rollup-plugin-buble": "^0.19.8",
-		"rollup-plugin-commonjs": "^10.1.0",
-		"rollup-plugin-scss": "^1.0.2",
-		"rollup-plugin-vue": "5.1.1",
-		"vue": "^2.6.11 || ^3.0.0",
-		"vue-jest": "^3.0.5",
-		"vue-template-compiler": "^2.6.11"
+		"jsdom": "^24.0.0",
+		"sass": "^1.75.0",
+		"vitest": "^1.5.2",
+		"vue": "^3.0.0"
 	},
 	"peerDependencies": {
-		"vue": "^2.0.0 || ^3.0.0"
+		"vue": "^3.0.0"
 	}
 }
