--- a/package.json
+++ b/package.json
@@ -52,13 +52,14 @@
 		"@babel/preset-env": "^7.24.4",
 		"@vitejs/plugin-vue": "^5.0.4",
 		"@vue/test-utils": "^2.4.5",
-		"eslint": "^5.16.0",
-		"eslint-config-standard": "^12.0.0",
-		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-node": "^9.2.0",
-		"eslint-plugin-promise": "^4.2.1",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^8.57.0",
+		"eslint-config-standard": "^17.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-standard": "^4.0.1",
-		"eslint-plugin-vue": "^5.2.3",
+		"eslint-plugin-vue": "^9.25.0",
 		"jsdom": "^24.0.0",
 		"sass": "^1.75.0",
 		"vitest": "^1.5.2",
